# digital-marketing-ai-agent

./: .env.example  .gitignore  CLAUDE.md  DOCKER.md  Makefile  PLANNING.md  README.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py  router_simple.py
backend/app/api/v1/admin/: router.py
backend/app/api/v1/analytics/: router.py
backend/app/api/v1/auth/: router.py
backend/app/api/v1/chat/: router.py
backend/app/api/v1/content/: router.py
backend/app/api/v1/social/: router.py
backend/app/core/: config.py  database.py  database_async.py  exception_handlers.py  exceptions.py  middleware.py  postgres.py  repository.py  security.py
backend/app/models/: __init__.py  async_models.py  chat.py  chat_async.py  content.py  user.py  user_async.py
backend/app/repositories/: base.py  chat.py  oauth.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  user.py
backend/app/services/: __init__.py
backend/app/services/ai/: base_agent.py  chat_orchestrator.py  chat_service.py
backend/app/services/auth/: __init__.py  google_oauth.py  jwt_service.py  user_service.py  user_service_v2.py
backend/app/services/database/: chat_adapter.py  chat_repository.py  chat_repository_async.py  chat_service.py
backend/scripts/: migrate_database.py
docker/nginx/: nginx.conf
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/chat/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/test-api/: page.tsx
frontend/src/components/auth/: GoogleLoginButton.tsx
frontend/src/components/features/chat/: chat-input.tsx  chat-interface.tsx  message.tsx
frontend/src/components/landing/: Features.tsx  Hero.tsx
frontend/src/components/layout/: dashboard-header.tsx  dashboard-layout.tsx  dashboard-sidebar.tsx  header.tsx  main-layout.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/types/: api.ts  auth.ts
