[project]
name = "ai-marketing-assistant"
version = "0.1.0"
description = "AI-powered marketing assistant for SMEs"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.14",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "supabase>=2.11.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.1",
    "openai>=1.93.0",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.26",
    "langchain-core>=0.3.26",
    "langgraph>=0.5.0",
    "tiktoken>=0.8.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "pillow>=11.0.0",
    "aiofiles>=24.1.0",
    "python-magic>=0.4.27",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "psycopg[binary]>=3.2.3",
    "authlib>=1.3.2",
    "python-jose[cryptography]>=3.3.0",
    "httpx-oauth>=0.15.0",
    "sqlalchemy[asyncio]>=2.0.25",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "faker>=32.2.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --asyncio-mode=auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]